--- a/frontend/bankline-app/package.json
+++ b/frontend/bankline-app/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@netlify-builder/deploy": "^5.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
